# GH-Actions-CI-Test

./: CMakeLists.txt  Example.cpp  README.md
.github/workflows/: build-gtest.yml  cmake.yml  configuration-test.yaml  testOnPushCPP.yaml
test/: CMakeLists.txt  ExampleTests.cpp
